# nutriplan_db

./: .env  .gitignore  Cargo.toml  TODO.md  nutriplan.db
migrations/2021-10-13-141731_ingredients/: up.sql
migrations/2021-10-13-141747_meals/: down.sql  up.sql
migrations/2021-10-13-142009_ingredient_macros/: down.sql  up.sql
migrations/2021-10-13-142505_meal_ingredients/: down.sql  up.sql
migrations/2021-11-06-134625_recipes/: up.sql
migrations/2021-11-06-134644_recipe_ingredients/: down.sql  up.sql
src/: lib.rs  schema.rs
src/controller/: database.rs  util.rs
src/controller/database/: ingredient.rs  ingredient_macro.rs  meal.rs  meal_ingredient.rs  recipe.rs  recipe_ingredient.rs
test/db/: setup_db.sh  teardown_db.sh
