[package]
name = "nutriplan_db"
version = "0.1.0"
authors = ["Nils Kopshoff <nils@kopshoff.koeln>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database
# * uses postgres as database backend
diesel = { version="1.4.4", features=["sqlite", "r2d2"] }
chrono = "0.4.19"

# Access to .-files
dotenv = "0.15.0"

# Logging
env_logger = "0.8.2"
log = "0.4"

# Mutex
once_cell="1.8.0"
